[package]
name = "learning-debt"
version = "0.1.0"
description = "A Tauri desktop app for Learning Debt."
authors = ["Ariel"]
edition = "2021"

[lib]
name = "learning_debt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
